2002-05-09  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/blackboard/Blackboard.java:
	Ignore org.cougaar.core.persistence.enabled. Always create
	persistence so that agent mobility is always possible. See
	BasePersistence checkin message for more detail.

	* org/cougaar/core/service/BlackboardService.java: 
	Bug 1232
	Define closeTransactionDontReset.
	Deprecate closeTransaction(boolean);

	* org/cougaar/core/servlet/SimpleServletSupportImpl.java: 
	* org/cougaar/core/mobility/servlet/MoveAgentServlet.java: 
	Bug 1232
	Use closeTransactionDontReset.
	
	* org/cougaar/core/blackboard/Subscriber.java:
	Bug 1232
	Define closeTransactionDontReset.
	Deprecate closeTransaction(boolean);

2002-05-08  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/blackboard/Subscriber.java:
	Avoid stuffing the inbox with envelopes if there are no
	subscriptions. The inbox is not emptied until the next transaction
	is opened and subscribers (such as servlets) may never open a
	transaction causing unbounded build-up of envelopes until memory
	is exhausted. New logic skips inbox stuffing if the number of
	subscriptions is zero and there is no open transaction. In
	addition, when an open transaction is closed and there are not
	(remaining) subscriptions, the inbox is cleared.

2002-05-06  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/SearchStringParser.java:
	Bug 1274
	Change equality comparison for multi-valued attributes to be true
	if any of the attribute values is equal.

2002-05-01  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/node/NodeAgent.java:
	Fixes the bug about UnsupportedOperationException when the
	NodeAgent receives a Relay.
	Call super.receiveMessage() with any message not otherwise
	handled.

2002-04-30  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/node/NodeAgent.java:
	Bug 1244
	Print more about the offending message so the problem can be debugged.

	* org/cougaar/core/adaptivity/TaskSensorPlugin.java:
	Bug 1243