@@ -1,5 +1,8 @@
 2002-05-09  Ray Tomlinson  <RTomlinson@bbn.com>
 
+	* org/cougaar/core/adaptivity/CPUTestPlugin.java:
+	More elaborate schedule of cpu condition for testing.
+
 	* org/cougaar/core/blackboard/Blackboard.java:
 	Ignore org.cougaar.core.persistence.enabled. Always create
 	persistence so that agent mobility is always possible. See
